Typo in the guide

--- a/static/guide.html
+++ b/static/guide.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Gold!</title>
+    <title>Bot Guide</title>
     <style>
         link {
             font-color: white;
