Update guide: add the pick command

--- a/static/guide.html
+++ b/static/guide.html
@@ -140,6 +140,7 @@
                                 </li>
                                 <li>leave - makes the bot leave the room this command is done in.</li>
                                 <li>say [target] - makes the bot say [target].</li>
+                                <li>pick [choice], [choice], ... - picks a random [choice].  Requires at least two options.</li>
                             </ul>
                         </li>
                     </ul>
