Add helix command jajaja

--- a/static/guide.html
+++ b/static/guide.html
@@ -141,6 +141,7 @@
                                 <li>leave - makes the bot leave the room this command is done in.</li>
                                 <li>say [target] - makes the bot say [target].</li>
                                 <li>pick [choice], [choice], ... - picks a random [choice].  Requires at least two options.</li>
+                                <li>helix - gives a random magic 8 ball type reply.</li>
                             </ul>
                         </li>
                     </ul>
